# col781-computer-graphics

./: README.md
A1_Software_Rasterizer/: CMakeLists.txt  LICENSE  init.sh
A1_Software_Rasterizer/examples/: e1.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp  e6.cpp  e7_clock.cpp  e8.cpp  field.cpp
A1_Software_Rasterizer/src/: api.inc  hw.cpp  hw.hpp  sw.cpp  sw.hpp
A3_Path_Tracing/a3-main/: .gitignore  CMakeLists.txt  TODO  references
A3_Path_Tracing/a3-main/executables/: e1.cpp  e10.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp  e6.cpp  e7.cpp  e8.cpp  e9.cpp  example.cpp
A3_Path_Tracing/a3-main/revamp_src/classes/: Camera.cpp  Camera.hpp  HitRecord.cpp  HitRecord.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  PointLight.cpp  PointLight.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp
A3_Path_Tracing/a3-main/revamp_src/image/: image.cpp  image.hpp
A4_KeyFraming_Collision/: .gitignore  CMakeLists.txt
A4_KeyFraming_Collision/executables/: part1.cpp  part2.cpp  part3.cpp
A4_KeyFraming_Collision/src/base/: camera.hpp  hw.hpp
A4_KeyFraming_Collision/src/frame/: catmull_rom.cpp  catmull_rom.hpp  cloth.cpp  cloth.hpp  rectangle.cpp  rectangle.hpp
